[build-system]
requires        =["setuptools>=61.0"]
build-backend   = "setuptools.build_meta"

[project]
name            = "AImodelsDB"
version         = "0.1.0"
description     = "SQLite database of AI models as fetched from models.dev"
readme          = "README.md"
requires-python = ">=3.10"
license         = "MIT"
authors         = [ {name = "René Nyffenegger"} ]
dependencies = [
    "RenesSQLiteHelper",
    "requests",
]

[project.urls]
Repository = "https://github.com/ReneNyffenegger/db-AImodels"
Homepage   = "https://renenyffenegger.ch/notes/development/Artificial-intelligence/models/database"
